# climate-action-ghg-emission-from-lulc-change

./: .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  environment.yaml  environment_deploy.yaml  notes.md  pyproject.toml
ghg_lulc/: artifact.py  emissions.py  input.py  operator_worker.py  plugin.py  utils.py
ghg_lulc/components/: emissions.py  raster_artifacts.py  statistic_artifacts.py  utils.py
ghg_lulc/core/: input.py  operator_worker.py
plugin/: emissions.py  plugin.py
resources/: documentation.md  gruenheide.geojson  methodology.md  methodology.txt  purpose.md  purpose.txt  sources.bib
resources/artifact_descriptions/: 01_header.md  02_LULC_classifications.md  03_LULC_change.md  04_Localized_emissions.md  05_LULC_emissions.md  06_emission_plot.md  07_area_plot.md  08_ghg_stocks.md  09_stats_change_type.md  10_summary.md  10a_summary.md  10b_area_info.md  11_references.md
resources/ghg_stock_sources/: hansis.csv  hansis_higher.csv  houghton.csv
test/: change_df.gpkg  conftest.py  test_0.tif  test_1.tif  test_2.tif  test_emissions.py  test_plugin.py  test_utils.py
test/core/: test_plugin.py
test/resources/: artifact_description_test.md  localised_emissions_text.md  minimal_first_ts.tiff  minimal_second_ts.tiff
