[tool.poetry]
name = "ghg_lulc"
version = "2.3.3"
description = "This plugin computes carbon flows from land use and land cover changes between two timestamps."
authors = ["Veit Ulrich <veit.ulrich@uni-heidelberg.de>", "Moritz Schott <moritz.schott@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.3"}
pydantic = "^2.8.2"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
geopandas = "^1.0.1"
pyproj = "^3.6.1"
pydantic-extra-types = "^2.5.0"
tabulate = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.coverage.run]
omit = ["test/*" , "ghg_lulc/plugin.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"