[tool.poetry]
name = "ghg_lulc"
version = "2.3.3"
description = "This plugin computes carbon flows from land use and land cover changes between two timestamps."
authors = ["Veit Ulrich <veit.ulrich@uni-heidelberg.de>", "Moritz Schott <moritz.schott@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.4"}
pydantic = "^2.8.2"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
geopandas = "^1.0.1"
pyproj = "^3.6.1"
pydantic-extra-types = "^2.5.0"
tabulate = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]



[tool.coverage.run]
omit = ["test/*" , "ghg_lulc/plugin.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"