[project]
name = "ghg_lulc"
version = "2.3.4"
description = "This plugin computes carbon flows from land use and land cover changes between two timestamps."
authors = [
    { name = "Veit Ulrich", email = "veit.ulrich@heigit.org"},
    { name = "Moritz Schott", email = "moritz.schott@heigit.org"},
]
readme = "README.md"

requires-python = ">=3.13.5,<3.14"
dependencies = [
    "climatoology @ git+https://gitlab.heigit.org/climate-action/climatoology.git@7.0.3",
    "pydantic (>=2.8.2,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "pydantic-extra-types (>=2.5.0,<3.0.0)",
    "shapely (>=2.0.2,<3.0.0)",
    "matplotlib (>=3.8.2,<4.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "pyproj (>=3.6.1,<4.0.0)",
    "tabulate (>=0.9.0, <1.0.0)",
    "numpy (>=2,<3)",
]

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/plugins/ghg-emission-from-lulc-change"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pandas-stubs = "^2.3.2.250827"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",
    "E4", "E7", "E9",
    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions
    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*" , "ghg_lulc/plugin.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
